@@ -13,10 +13,11 @@ import androidx.annotation.CallSuper;
 import androidx.annotation.DrawableRes;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
+import androidx.annotation.VisibleForTesting;
 
+import org.chromium.base.metrics.RecordUserAction;
 import org.chromium.base.metrics.TimingMetric;
 import org.chromium.chrome.browser.omnibox.MatchClassificationStyle;
-import org.chromium.chrome.browser.omnibox.OmniboxFeatures;
 import org.chromium.chrome.browser.omnibox.OmniboxMetrics;
 import org.chromium.chrome.browser.omnibox.R;
 import org.chromium.chrome.browser.omnibox.styles.OmniboxDrawableState;
@@ -25,20 +26,24 @@ import org.chromium.chrome.browser.omnibox.styles.OmniboxResourceProvider;
 import org.chromium.chrome.browser.omnibox.suggestions.SuggestionHost;
 import org.chromium.chrome.browser.omnibox.suggestions.SuggestionProcessor;
 import org.chromium.chrome.browser.omnibox.suggestions.base.BaseSuggestionViewProperties.Action;
+import org.chromium.components.metrics.OmniboxEventProtos.OmniboxEventProto.PageClassification;
+import org.chromium.components.omnibox.AutocompleteInput;
 import org.chromium.components.omnibox.AutocompleteMatch;
 import org.chromium.components.omnibox.AutocompleteMatch.MatchClassification;
+import org.chromium.components.omnibox.OmniboxFeatures;
+import org.chromium.components.omnibox.OmniboxSuggestionType;
 import org.chromium.ui.modelutil.PropertyModel;
 import org.chromium.url.GURL;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 /** A class that handles base properties and model for most suggestions. */
 public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor {
     protected final @NonNull Context mContext;
     protected final @NonNull SuggestionHost mSuggestionHost;
     private final @NonNull ActionChipsProcessor mActionChipsProcessor;
-    private final @Nullable OmniboxImageSupplier mImageSupplier;
+    private final @NonNull Optional<OmniboxImageSupplier> mImageSupplier;
     private final int mDesiredFaviconWidthPx;
     private final int mDecorationImageSizePx;
     private final int mSuggestionSizePx;
@@ -51,7 +56,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
     public BaseSuggestionViewProcessor(
             @NonNull Context context,
             @NonNull SuggestionHost host,
-            @Nullable OmniboxImageSupplier imageSupplier) {
+            @NonNull Optional<OmniboxImageSupplier> imageSupplier) {
         mContext = context;
         mSuggestionHost = host;
         mImageSupplier = imageSupplier;
@@ -64,7 +69,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
         mSuggestionSizePx =
                 mContext.getResources()
                         .getDimensionPixelSize(R.dimen.omnibox_suggestion_content_height);
-        mActionChipsProcessor = new ActionChipsProcessor(context, host);
+        mActionChipsProcessor = new ActionChipsProcessor(host);
     }
 
     /**
@@ -94,7 +99,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
     /**
      * Retrieve fallback icon for a given suggestion. Must be completed synchromously.
      *
-     * @param suggestion AutocompleteMatch instance to retrieve fallback icon for
+     * @param match AutocompleteMatch instance to retrieve fallback icon for
      * @return OmniboxDrawableState that can be immediately applied to suggestion view
      */
     protected @NonNull OmniboxDrawableState getFallbackIcon(@NonNull AutocompleteMatch match) {
@@ -112,7 +117,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param decoration the OmniboxDrawableState to apply
      */
     protected void setOmniboxDrawableState(
-            PropertyModel model, @NonNull OmniboxDrawableState decoration) {
+            @NonNull PropertyModel model, @NonNull OmniboxDrawableState decoration) {
         model.set(BaseSuggestionViewProperties.ICON, decoration);
     }
 
@@ -122,7 +127,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model Property model to update.
      * @param actions List of actions for the suggestion.
      */
-    protected void setActionButtons(PropertyModel model, List<Action> actions) {
+    protected void setActionButtons(@NonNull PropertyModel model, @Nullable List<Action> actions) {
         model.set(BaseSuggestionViewProperties.ACTION_BUTTONS, actions);
     }
 
@@ -130,15 +135,24 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * Setup action icon base on the suggestion, either show query build arrow or switch to tab.
      *
      * @param model Property model to update.
+     * @param input The input to produce this suggestion.
      * @param suggestion Suggestion associated with the action button.
      * @param position The position of the button in the list.
      */
-    protected void setTabSwitchOrRefineAction(
-            PropertyModel model, AutocompleteMatch suggestion, int position) {
+    @VisibleForTesting(otherwise = VisibleForTesting.PROTECTED)
+    public void setTabSwitchOrRefineAction(
+            @NonNull PropertyModel model,
+            @NonNull AutocompleteInput input,
+            @NonNull AutocompleteMatch suggestion,
+            int position) {
         @DrawableRes int icon;
         String iconString;
         Runnable action;
-        if (suggestion.hasTabMatch()) {
+        if (suggestion.hasTabMatch() || suggestion.getType() == OmniboxSuggestionType.OPEN_TAB) {
+            // Hub doesn't have refine icons for switch-to-tab.
+            if (input.getPageClassification().getAsInt() == PageClassification.ANDROID_HUB_VALUE) {
+                return;
+            }
             icon = R.drawable.switch_to_tab;
             iconString =
                     OmniboxResourceProvider.getString(
@@ -151,11 +165,19 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
                             R.string.accessibility_omnibox_btn_refine,
                             suggestion.getFillIntoEdit());
             icon = R.drawable.btn_suggestion_refine;
-            action = () -> mSuggestionHost.onRefineSuggestion(suggestion);
+            action =
+                    () -> {
+                        if (suggestion.isSearchSuggestion()) {
+                            RecordUserAction.record("MobileOmniboxRefineSuggestion.Search");
+                        } else {
+                            RecordUserAction.record("MobileOmniboxRefineSuggestion.Url");
+                        }
+                        mSuggestionHost.onRefineSuggestion(suggestion);
+                    };
         }
         setActionButtons(
                 model,
-                Arrays.asList(
+                List.of(
                         new Action(
                                 OmniboxDrawableState.forSmallIcon(mContext, icon, true),
                                 iconString,
@@ -194,7 +216,11 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
     }
 
     @Override
-    public void populateModel(AutocompleteMatch suggestion, PropertyModel model, int position) {
+    public void populateModel(
+            @NonNull AutocompleteInput input,
+            @NonNull AutocompleteMatch suggestion,
+            @NonNull PropertyModel model,
+            int position) {
         model.set(
                 BaseSuggestionViewProperties.ON_CLICK,
                 () -> onSuggestionClicked(suggestion, position));
@@ -205,6 +231,13 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
                 BaseSuggestionViewProperties.ON_FOCUS_VIA_SELECTION,
                 () -> mSuggestionHost.setOmniboxEditingText(suggestion.getFillIntoEdit()));
         setActionButtons(model, null);
+
+        model.set(BaseSuggestionViewProperties.USE_LARGE_DECORATION, false);
+        model.set(BaseSuggestionViewProperties.SHOW_DECORATION, true);
+        model.set(
+                BaseSuggestionViewProperties.ACTION_CHIP_LEAD_IN_SPACING,
+                OmniboxResourceProvider.getSuggestionDecorationIconSizeWidth(mContext));
+        model.set(BaseSuggestionViewProperties.TOP_PADDING, 0);
 
         if (OmniboxFeatures.isTouchDownTriggerForPrefetchEnabled()
                 && !OmniboxFeatures.isLowMemoryDevice()
@@ -283,17 +316,18 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model Model representing current suggestion.
      * @param url Target URL the suggestion points to.
      */
-    protected void fetchSuggestionFavicon(PropertyModel model, GURL url) {
-        if (mImageSupplier == null) return;
-
-        mImageSupplier.fetchFavicon(
-                url,
-                icon -> {
-                    if (icon != null) {
-                        setOmniboxDrawableState(
-                                model, OmniboxDrawableState.forFavIcon(mContext, icon));
-                    }
-                });
+    protected void fetchSuggestionFavicon(@NonNull PropertyModel model, @NonNull GURL url) {
+        mImageSupplier.ifPresent(
+                s ->
+                        s.fetchFavicon(
+                                url,
+                                icon -> {
+                                    if (icon != null) {
+                                        setOmniboxDrawableState(
+                                                model,
+                                                OmniboxDrawableState.forFavIcon(mContext, icon));
+                                    }
+                                }));
     }
 
     /**
@@ -303,12 +337,17 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model the PropertyModel to update with retrieved image
      * @param imageUrl the URL of the image to retrieve and decode
      */
-    protected void fetchImage(PropertyModel model, GURL imageUrl) {
-        if (mImageSupplier == null) return;
-        mImageSupplier.fetchImage(
-                imageUrl,
-                bitmap -> {
-                    setOmniboxDrawableState(model, OmniboxDrawableState.forImage(mContext, bitmap));
-                });
+    protected void fetchImage(@NonNull PropertyModel model, @NonNull GURL imageUrl) {
+        mImageSupplier.ifPresent(
+                s ->
+                        s.fetchImage(
+                                imageUrl,
+                                bitmap -> {
+                                    if (bitmap != null) {
+                                        setOmniboxDrawableState(
+                                                model,
+                                                OmniboxDrawableState.forImage(mContext, bitmap));
+                                    }
+                                }));
     }
 }
